feat: refactor version queries, remove platform download table